--- a/vcweb/core/templates/account/register.html
+++ b/vcweb/core/templates/account/register.html
@@ -1,7 +1,26 @@
 {% extends "base-vcweb-form.html" %}
-{% block head %}
-{{ block.super }}
 
+{% block title %}Register with vcweb{% endblock %}
+{% block form %}
+<h3>New User</h3>
+<p>
+Already have an account?  You can <a href='{% url core:login %}'>login here</a> or <a href='{% url password-reset %}'>retrieve your password</a>.
+</p>
+{% include "includes/bootstrap-form.html" %}
+<div class='form-actions'>
+    <button type='submit' class='btn btn-primary'>Submit</button>
+</div>
+    <br><br>
+    You can also register or sign in using your other social accounts:
+    <ul class="authbadges">
+        <!-- <li><a href="{% url socialauth_begin 'openid' %}">OpenID login</a></li> -->
+        <li><a href="{% url socialauth_begin 'twitter' %}"><img width="150", height="24" src="{{STATIC_URL}}images/oauth/sign-in-with-twitter_0.png"></a></li>
+        <li><a href="{% url socialauth_begin 'foursquare' %}"><img src="{{STATIC_URL}}images/oauth/foursquare-connect-black.png"></a></li>
+        <li><a href="{% url socialauth_begin 'facebook' %}"><img width="193", height="23" src="{{STATIC_URL}}images/oauth/facebook-connect-button.png"></a></li>
+    </ul>
+{% endblock form %}
+{% block javascript %}
+{{ block.super }}
 <script type='text/javascript'>
 $(document).ready(function() {
 	$("#vcweb-form :input:visible:enabled:first").focus();
@@ -30,25 +49,5 @@ $(document).ready(function() {
         });
 });
 </script>
+{% endblock %}
 
-{% endblock head %}
-
-{% block title %}Register with vcweb{% endblock %}
-{% block form %}
-<h3>New User</h3>
-<p>
-Already have an account?  You can <a href='{% url core:login %}'>login here</a> or <a href='{% url password-reset %}'>retrieve your password</a>.
-</p>
-{% include "includes/bootstrap-form.html" %}
-<div class='form-actions'>
-    <button type='submit' class='btn btn-primary'>Submit</button>
-</div>
-    <br><br>
-    You can also register or sign in using your other social accounts:
-    <ul class="authbadges">
-        <!-- <li><a href="{% url socialauth_begin 'openid' %}">OpenID login</a></li> -->
-        <li><a href="{% url socialauth_begin 'twitter' %}"><img width="150", height="24" src="{{STATIC_URL}}images/oauth/sign-in-with-twitter_0.png"></a></li>
-        <li><a href="{% url socialauth_begin 'foursquare' %}"><img src="{{STATIC_URL}}images/oauth/foursquare-connect-black.png"></a></li>
-        <li><a href="{% url socialauth_begin 'facebook' %}"><img width="193", height="23" src="{{STATIC_URL}}images/oauth/facebook-connect-button.png"></a></li>
-    </ul>
-{% endblock form %}
