housekeeping + chat page refactor
--HG--
rename : vcweb/core/templates/base-vcweb-form.html => vcweb/core/templates/forms/base.html

--- a/vcweb/core/templates/account/password_reset_done.html
+++ b/vcweb/core/templates/account/password_reset_done.html
@@ -1,4 +1,4 @@
-{% extends "base-vcweb-form.html" %}
+{% extends "forms/base.html" %}
 
 {% block title %}VCWEB Password Reset Complete{% endblock %}
 
