--- a/vcweb/core/templates/account/register.html
+++ b/vcweb/core/templates/account/register.html
@@ -1,4 +1,4 @@
-{% extends "base-vcweb-form.html" %}
+{% extends "forms/base.html" %}
 
 {% block title %}Register with vcweb{% endblock %}
 {% block form %}
